[package]
name = "pbss"
version = "0.1.0"
authors = ["Arijit Dey <arijid79@gmail.com>"]
edition = "2018"
license = "MIT License"
description = "Practically Better Stylesheets"
readme = "README.md"
repository = "https://github.com/arijit79/pbss"
keywords = ["Style sheets", "CSS"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.7"
filetime = "0.2"