[package]
name = "pbss"
version = "2.0.0"
authors = ["Arijit Dey <arijid79@gmail.com>"]
edition = "2018"
license = "MIT License"
description = "Practically Better Stylesheets"
readme = "README.md"
repository = "https://github.com/arijit79/pbss"
keywords = ["Style sheets", "CSS"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2"
mynk = { path = "../mynk" }
util = { path = "../util" }